--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,22 @@ audio {
 #questions {
     background-color: white;
 }
+
+#quest {
+    text-align: center;
+    background-color: white;
+    color: black;
+    border: solid black 1px;
+    padding: 25px;
+    text-size-adjust: auto;
+    text-emphasis: bold;
+}
+
+#results {
+    background-color: teal;
+}
+
+#options {
+    align-content: center;
+    
+}
